src/test/deca/syntax/invalid/created/avec_objet/incomp.deca
// Résultat erreur:
//    Appel de méthode avec des paramètres incompatibles (règle 3.41)
//
// Description:
//    Tests de programme incorrect contextuellement (appel de méthode avec des paramètres incompatibles)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    int maMethode(int a) {
        return a * 2;
    }

    int uneAutreMethode() {
        int resultat = maMethode("texte"); 
        return resultat;
    }
}
